<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        app:showAsAction="always"
        android:icon="@drawable/ic_favorite_full_foreground"/>
</menu>